--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,18 @@
 body {
   font-family: 'Oxygen', sans-serif;
   font-size: 24px;
+  color: white;
+}
+
+a {
+  color: white;
 }
 
 
 /*navbar*/
 
-ul {}
-
-li {}
-
-.nav {
-  background-color: skyblue;
+nav {
+  background-color: rgb(40, 103, 103);
 }
 
 
@@ -21,8 +22,20 @@ li {}
 /*header*/
 
 header {
-  height: 100px;
-  background-color: blue;
+  background-color: rgb(172, 67, 67);
+}
+
+img {
+  width: 380px;
+}
+
+.centr {
+  padding: 50px;
+  text-align: center;
+}
+
+h3 {
+  padding: 20px;
 }
 
 
